--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "2dekans-veilingen",
+  "name": "tradingcardgame",
   "version": "0.0.1",
   "scripts": {
     "start": "php -S localhost:8080",
